# dsa_os

./: .gitignore  AFTER_PROBLEM_COMPLETION.md  FIXES_PROPOSAL.md  GAPS_ANALYSIS.md  HOW_TO_RUN.md  LICENSE  Makefile  README.md  dsa_progress.json  interview_playbook.md  mentor_memory.md  mentor_protocol_updated.md  mistake_catalog.json  pyproject.toml  requirements.txt  session_notes.md  study_plan_months_1-3.xlsx  thinking_patterns.md
boot_instructions/: instructions.txt
curriculum/: curriculum.json  dependency_graph.json  dsa-skill-map.md  stages.json
docs/: DSA_OS_MASTER.md
knowledge/: patterns.json  skills.json
mentor/: enhanced_mentor_protocol.md  error_taxonomy.md  mentor_protocol.md  mock_interview_protocol.md
plans/: CURRICULUM_ORDER_AUDIT.md  CURRICULUM_ORDER_AUDIT_PROMPT.md  CURRICULUM_ORDER_FIX_PLAN.md  CURRICULUM_ORDER_PROMPT.txt  CURRICULUM_ORDER_REPORT.md  DASHBOARD_REDESIGN_AGENT_GUIDE.md  DASHBOARD_REDESIGN_DESIGN.md  DASHBOARD_REDESIGN_PLAN.md  DASHBOARD_REDESIGN_PROMPT.txt  DASHBOARD_REDESIGN_REPORT.md  FINAL_REVIEW_PLAN.md  PHASE_4_PLAN.md  PHASE_5_PLAN.md  PHASE_6_PLAN.md  PHASE_EXECUTION_GUIDE.md
progress/: legacy_apprenticeship_log_archive.md  progress.json  progress_template.json  scoring.json
scripts/: _shared.py  dashboard.py  next_problem.py  revision_report.py  run_checks.py  serve_dashboard.py  test_curriculum_order.py  test_dashboard_feed.py  test_run_checks.py  test_shared.py  test_update_progress.py  test_validate_curriculum.py  test_weakness_lab.py  update_progress.py  validate_curriculum.py  weakness_lab.py
(+9 files in other folders)
